feat(serv): Новая реализация: Нормализация.